[gd_scene load_steps=4 format=1]

[ext_resource path="res://addons/skybox_converter_plugin/skybox_converter_control.gd" type="Script" id=1]
[ext_resource path="res://addons/skybox_converter_plugin/grid.gd" type="Script" id=2]
[ext_resource path="res://addons/skybox_converter_plugin/viewport.gd" type="Script" id=3]

[node name="Skybox Converter" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="ImagePreview" type="Panel" parent="."]

editor/display_folded = true
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 363.0
margin/bottom = 0.0

[node name="TextureFrame" type="TextureFrame" parent="ImagePreview"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 8.0
margin/right = 355.0
margin/bottom = 234.0
expand = true
stretch_mode = 0

[node name="grid" type="Control" parent="ImagePreview/TextureFrame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="HSeparator" type="HSeparator" parent="ImagePreview"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 236.0
margin/right = 355.0
margin/bottom = 246.0

[node name="matrix1" type="CheckBox" parent="ImagePreview"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 250.0
margin/right = 74.0
margin/bottom = 273.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "2 x 3"
flat = false
align = 0

[node name="matrix2" type="CheckBox" parent="ImagePreview"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 250.0
margin/right = 147.0
margin/bottom = 273.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "3 x 4"
flat = false
align = 0

[node name="file_open_dialog" type="Button" parent="ImagePreview"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 269.0
margin/top = 248.0
margin/right = 346.0
margin/bottom = 274.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load"
flat = false

[node name="HSeparator1" type="HSeparator" parent="ImagePreview"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 277.0
margin/right = 355.0
margin/bottom = 287.0

[node name="HSeparator2" type="HSeparator" parent="ImagePreview"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 313.0
margin/right = 355.0
margin/bottom = 323.0

[node name="resolutions" type="OptionButton" parent="ImagePreview"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 288.0
margin/right = 147.0
margin/bottom = 312.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "256 x 256"
flat = false
align = 0
selected = 0
items = [ "256 x 256", null, false, -1, null, "512 x 512", null, false, -1, null, "1024 x 1024", null, false, -1, null, "2048 x 2048", null, false, -1, null ]

[node name="save" type="Button" parent="ImagePreview"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 169.0
margin/top = 288.0
margin/right = 345.0
margin/bottom = 311.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save result"
flat = false

[node name="preview" type="Panel" parent="ImagePreview"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 322.0
margin/right = 346.0
margin/bottom = 549.0

[node name="0" type="TextureFrame" parent="ImagePreview/preview"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 110.0
margin/bottom = 110.0
expand = true
stretch_mode = 0

[node name="face" type="OptionButton" parent="ImagePreview/preview/0"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 35.0
margin/top = 71.0
margin/right = 98.0
margin/bottom = 91.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "left"
flat = false
clip_text = true
align = 0
selected = 0
items = [ "left", null, false, -1, null, "right", null, false, -1, null, "bottom", null, false, -1, null, "up", null, false, -1, null, "front", null, false, -1, null, "back", null, false, -1, null ]

[node name="1" type="TextureFrame" parent="ImagePreview/preview"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 117.0
margin/top = 10.0
margin/right = 217.0
margin/bottom = 110.0
expand = true
stretch_mode = 0

[node name="face" type="OptionButton" parent="ImagePreview/preview/1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 72.0
margin/right = 95.0
margin/bottom = 92.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "right"
flat = false
clip_text = true
align = 0
selected = 1
items = [ "left", null, false, -1, null, "right", null, false, -1, null, "bottom", null, false, -1, null, "up", null, false, -1, null, "front", null, false, -1, null, "back", null, false, -1, null ]

[node name="2" type="TextureFrame" parent="ImagePreview/preview"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 224.0
margin/top = 10.0
margin/right = 324.0
margin/bottom = 110.0
expand = true
stretch_mode = 0

[node name="face" type="OptionButton" parent="ImagePreview/preview/2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 72.0
margin/right = 93.0
margin/bottom = 92.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "bottom"
flat = false
clip_text = true
align = 0
selected = 2
items = [ "left", null, false, -1, null, "right", null, false, -1, null, "bottom", null, false, -1, null, "up", null, false, -1, null, "front", null, false, -1, null, "back", null, false, -1, null ]

[node name="3" type="TextureFrame" parent="ImagePreview/preview"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 117.0
margin/right = 110.0
margin/bottom = 217.0
expand = true
stretch_mode = 0

[node name="face" type="OptionButton" parent="ImagePreview/preview/3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 72.0
margin/right = 95.0
margin/bottom = 92.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "up"
flat = false
clip_text = true
align = 0
selected = 3
items = [ "left", null, false, -1, null, "right", null, false, -1, null, "bottom", null, false, -1, null, "up", null, false, -1, null, "front", null, false, -1, null, "back", null, false, -1, null ]

[node name="4" type="TextureFrame" parent="ImagePreview/preview"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 117.0
margin/top = 117.0
margin/right = 217.0
margin/bottom = 217.0
expand = true
stretch_mode = 0

[node name="face" type="OptionButton" parent="ImagePreview/preview/4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 33.0
margin/top = 74.0
margin/right = 96.0
margin/bottom = 94.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "front"
flat = false
clip_text = true
align = 0
selected = 4
items = [ "left", null, false, -1, null, "right", null, false, -1, null, "bottom", null, false, -1, null, "up", null, false, -1, null, "front", null, false, -1, null, "back", null, false, -1, null ]

[node name="5" type="TextureFrame" parent="ImagePreview/preview"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 224.0
margin/top = 117.0
margin/right = 324.0
margin/bottom = 217.0
expand = true
stretch_mode = 0

[node name="face" type="OptionButton" parent="ImagePreview/preview/5"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 29.0
margin/top = 74.0
margin/right = 92.0
margin/bottom = 94.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "back"
flat = false
clip_text = true
align = 0
selected = 5
items = [ "left", null, false, -1, null, "right", null, false, -1, null, "bottom", null, false, -1, null, "up", null, false, -1, null, "front", null, false, -1, null, "back", null, false, -1, null ]

[node name="ViewportSprite" type="ViewportSprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 13.2964, 526.258 )
viewport = NodePath("Viewport")
centered = false
script/script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="ViewportSprite"]

rect = Rect2( 0, 0, 332, 280 )
own_world = true
world = null
transparent_bg = false
render_target/enabled = true
render_target/v_flip = false
render_target/clear_on_new_frame = true
render_target/filter = false
render_target/gen_mipmaps = false
render_target/update_mode = 2
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = false
gui/disable_input = false

[node name="Camera" type="Camera" parent="ViewportSprite/Viewport"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.0401 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="Camera" type="Camera" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0


